# shop

./: pyproject.toml  requirements.txt  setup.cfg
.github/: dependabot.yml
.github/workflows/: branch.yaml
cart/: cart.py  forms.py  views.py
cart/locale/en/LC_MESSAGES/: django.po
cart/locale/es/LC_MESSAGES/: django.po
cart/templates/cart/: cart_detail.html
coupons/: views.py
coupons/locale/en/LC_MESSAGES/: django.po
coupons/locale/es/LC_MESSAGES/: django.po
coupons/migrations/: 0001_initial.py
docs/: conf.py  index.rst
locale/en/LC_MESSAGES/: django.po
locale/es/LC_MESSAGES/: django.po
main/: celery.py  settings.py  urls.py
orders/: admin.py  forms.py  models.py  tasks.py  urls.py  views.py
orders/locale/en/LC_MESSAGES/: django.po
orders/locale/es/LC_MESSAGES/: django.po
orders/migrations/: 0001_initial.py  0002_order_braintree_id.py  0003_order_coupon_order_discount.py
orders/templates/admin/orders/: order_detail.html
orders/templates/orders/: order_created.html  order_form.html  order_pdf.html
payment/: tasks.py  urls.py  views.py
payment/locale/en/LC_MESSAGES/: django.po
payment/locale/es/LC_MESSAGES/: django.po
payment/templates/payment/: payment_canceled.html  payment_done.html  payment_process.html
payment/tests/: test_views.py
shop/: admin.py  models.py  recommender.py  urls.py  views.py
shop/migrations/: 0001_initial.py
shop/templates/shop/: base.html  product_detail.html  product_list.html
shop/tests/: test_views.py
