[tool.poetry]
name = "ecommerce"
version = "0.1.0"
description = "An online shopping store"
authors = ["Gurupratap Matharu <gurupratap.matharu@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.6"
Pillow = "^9.2.0"
celery = "^5.2.7"
flower = "^1.1.0"
braintree = "^4.15.2"
python-dotenv = "^0.20.0"
weasyprint = "^57.2"
Werkzeug = "^2.2.1"
django-rosetta = "^0.9.8"
django-localflavor = "^3.1"
redis = "^4.3.4"
mercadopago = "^2.2.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
pytest-django = "^4.5.2"
black = "^22.6.0"
isort = "^5.10.1"
flake8 = "^4.0.1"
bandit = "^1.7.4"
safety = "^2.0.0"
django-extensions = "^3.2.0"
ipython = "^8.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
skip = ["docs", "migrations"]

[tool.black]
exclude = '''
/(
  | migrations
)/
'''

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "main.settings"